@@ -6,6 +6,7 @@
     * Skip the slow bulk tests on Firebird for now
     * Document that deep changes are not working
     * Require perl-5.8.3
+    * Ignore unsupported streamers by just returning the data (was undef)
 
 0.12	- 30 Apr 2014, H.Merijn Brand
     * Amend tests to not fail when not an error
